# bugs_top100

./: .gitignore  README.md  pyproject.toml
bugs_top100/: __init__.py  bugs.py
