[build-system]
requires = ["setuptools>=64.0.0", "wheel", "beautifulsoup4", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "bugs_top100"
version = "1.1.0"
authors = [
  { name="Minho Park", email="petctusweet@naver.com" },
]
description = "This is a package that allows you to easily import Bugs Top100 information. Suitable for training lists and dictionaries."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'beautifulsoup4',
  'requests',
]

[project.urls]
"Homepage" = "https://github.com/777Mino777/bugs_top100"
"Bug Tracker" = "https://github.com/777Mino777/bugs_top100/issues"